cabal-version:      2.4
name:               hl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             gyara
maintainer:         me@gyara.moe

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hl
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Day1,
      Day2,
      Day3,
      Day4,
      Day5

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
